Static height on mobile browsers JS fix

--- a/app/[lang]/_styles/home.css
+++ b/app/[lang]/_styles/home.css
@@ -1,20 +1,27 @@
 @import './animations.css';
 
 #home-screen {
-  /* Fix instagram native in-app browser 100vh bug / Default => 100dvh - 60px (waves) */
+  /* Default: 100dvh - 60px (waves) */
   height: calc(100vh - 60px);
 
-  /* Fix in-app-browser 100vh bug */
+  /* Fix Android or in-app-browser 100vh bug (+JS) */
   max-height: var(--max-height-px);
   min-height: var(--min-height-px);
-
-  /* iOS Webkit Fix 100vh - 60px (waves) - 120px (navbar) */
+  /* Fix iOS 100vh bug (Fallback if isMobile() doesnt catch Safari) */
   @supports (-webkit-touch-callout: none) {
     height: calc(100vh - 180px);
   }
+
   /* Mobile landscape (no photo) */
-  @media only screen and (max-width: 1024px) and (orientation: landscape) {
-    min-height: calc(100vh - 140px);
+  @media only screen and (max-width: 768px) and (orientation: landscape) {
+    height: calc(100vh - 140px);
+    #home-screen-photo {
+      display: none;
+    }
+  }
+  /* iPad/Tablet landscape (no photo) -Fallback if isMobile() doesnt catch Safari- */
+  @supports (-webkit-touch-callout: none) and (orientation: landscape) {
+    height: calc(100vh - 140px);
     #home-screen-photo {
       display: none;
     }
